src/test/ui/impl-trait/where-allowed-2.stderr
error[E0720]: opaque type expands to a recursive type
  --> $DIR/where-allowed-2.rs:6:30
   |
LL | fn in_adt_in_return() -> Vec<impl Debug> { panic!() }
   |                              ^^^^^^^^^^ expands to a recursive type
   |
   = note: type resolves to itself

error: aborting due to previous error

For more information about this error, try `rustc --explain E0720`.
